--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Chrome Developer Tools - Advanced Features</title>
+		<title>The Future of The Web Platform</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Presentation about The Future of The Web Platform">
+		<meta name="author" content="Dimitar Bonev">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -36,13 +36,13 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 		    <section>
-					<h2>Chrome Developer Tools</h2>
-					<h3>Advanced Features</h3>
-					<h4 id="presentation-date">December 2012</h4>
+					<h2>The Future of The Web Platform</h2>
+					<h3>and some recent features</h3>
+					<h4 id="presentation-date">August 2013</h4>
 				</section>
 				<section data-state=presentor>
-					<h2>Who am I?</h2>
-					<h3>Dimitar Bonev a.k.a Mitko - developer in Behind The Book team</h3>
+					<h2>Presented by</h2>
+					<h3>Mitko Bonev <span class=position_rank>Senior</span> developer in the StageIt team</h3>
 				</section>
 				<section>
 					<h2>Software Setup</h2>
