order enabled Chrome flags by importance

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 						<li>
 							Chrome <a href="about:flags">flags</a> turned on
 							<ul>
+								<li>experimental Web Platform features</li>
 								<li>Developer Tools experiments</li>
-								<li>Experimental JavaScript</li>
 							</ul>
 						</li>
 					</ul>
