add Timers slide

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 				</section>
 				<section>
 					<section>
-						<h2>Extra Tools</h2>
+						<h2>High-precision timers</h2>
+						<img src="assets/img/timer.png"/>
 					</section>
 					<section>
 						<h3><a href="http://net.tutsplus.com/tutorials/tools-and-tips/say-yo-to-yeoman/" target=_blank>Yeoman</a></h3>
