add User Timing slide and demo

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 					<ul>
 						<li>
 							<a href="http://paulirish.com/2012/chrome-canary-for-developers/" target=_blank>Chrome Canary</a>
-							<img src="assets/img/chrome-canary-logo.png"/>
-							<img src="assets/img/canary-bird.jpg"/>
+							<img class=inline src="assets/img/chrome-canary-logo.png"/>
+							<img class=inline src="assets/img/canary-bird.jpg"/>
 							<ul>
 								<li>bleeding-edge build</li>
-								<li>runs side-by-side with your other Chrome installation <img src="assets/img/chrome-side-by-side.jpg"/></li>
+								<li>runs side-by-side with your other Chrome installation <img class=inline src="assets/img/chrome-side-by-side.jpg"/></li>
 							</ul>
 						</li>
 						<li>
@@ -71,13 +71,13 @@
 						<img src="assets/img/timer.png"/>
 					</section>
 					<section>
-						<h3><a href="http://net.tutsplus.com/tutorials/tools-and-tips/say-yo-to-yeoman/" target=_blank>Yeoman</a></h3>
-						<blockquote>Yeoman is a robust and opinionated set of tools, libraries, and a workflow that can help developers quickly build beautiful, compelling web apps</blockquote>
-					</section>
-					<section>
-						<h3><a href="http://www.nczonline.net/blog/tag/ecmascript-6/" target=_blank>EcmaScript 6</a></h3>
+						<h3>Timer Specifications</h3>
 						<ul>
-							<li>Set, Map, WeakMap</li>
+							<li>User Timing - <a href=demos/user_timing/index.html target=_blank>measure app code performance</a></li>
+								<ul>
+									<li>PerformanceMark - named timestamp since navigationStart</li>
+									<li>PerformanceMeasure - named duration between two marks</li>
+								</ul>
 							<li>class, module</li>
 							<li>Generator (yield)</li>
 							<li><a href="http://kangax.github.com/es5-compat-table/es6/" target=_blank>what your browser supports?</a></li>
