add Navigation Timing slide and demo

--- a/index.html
+++ b/index.html
@@ -73,12 +73,20 @@
 					<section>
 						<h3>Timer Specifications</h3>
 						<ul>
-							<li>User Timing - <a href=demos/user_timing/index.html target=_blank>measure app code performance</a></li>
+							<li>
+								User Timing - <a href=demos/user_timing/index.html target=_blank>measure js code performance</a>
 								<ul>
 									<li>PerformanceMark - named timestamp since navigationStart</li>
 									<li>PerformanceMeasure - named duration between two marks</li>
 								</ul>
-							<li>class, module</li>
+							</li>
+							<li>
+								Navigation Timing - <a href=demos/navigation_timing/index.html target=_blank>measure page navigation</a>
+								<ul>
+									<li>PerformanceNavigation - type of page navigation</li>
+									<li>PerformanceTiming - page navigation timestamps</li>
+								</ul>
+							</li>
 							<li>Generator (yield)</li>
 							<li><a href="http://kangax.github.com/es5-compat-table/es6/" target=_blank>what your browser supports?</a></li>
 						</ul>
