make <img> elements valid

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 					<ul>
 						<li>
 							<a href="http://paulirish.com/2012/chrome-canary-for-developers/" target=_blank>Chrome Canary</a>
-							<img class=inline src="assets/img/chrome-canary-logo.png"/>
-							<img class=inline src="assets/img/canary-bird.jpg"/>
+							<img class=inline src="assets/img/chrome-canary-logo.png" alt="chrome canary logo"/>
+							<img class=inline src="assets/img/canary-bird.jpg" alt="canary bird"/>
 							<ul>
 								<li>bleeding-edge build</li>
-								<li>runs side-by-side with your other Chrome installation <img class=inline src="assets/img/chrome-side-by-side.jpg"/></li>
+								<li>runs side-by-side with your other Chrome installation <img class=inline src="assets/img/chrome-side-by-side.jpg" alt="chrome side-by-side"/></li>
 							</ul>
 						</li>
 						<li>
@@ -68,7 +68,7 @@
 				<section>
 					<section>
 						<h2>High-precision timers</h2>
-						<img src="assets/img/timer.png"/>
+						<img src="assets/img/timer.png" alt="timer"/>
 					</section>
 					<section>
 						<h3>Timer Specifications</h3>
