add Resource Timing slide and demo

--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
 									<li>PerformanceTiming - page navigation timestamps</li>
 								</ul>
 							</li>
-							<li>Generator (yield)</li>
-							<li><a href="http://kangax.github.com/es5-compat-table/es6/" target=_blank>what your browser supports?</a></li>
+							<li>
+								Resource Timing - <a href=demos/resource_timing/index.html target=_blank>measure resources timings</a>
+								<ul>
+									<li>PerformanceResourceTiming - resource initiator and timestamps</li>
+								</ul>
+							</li>
 						</ul>
 					</section>
 					<section>
