add Dialog slide

--- a/index.html
+++ b/index.html
@@ -97,6 +97,29 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>&lt;dialog&gt; Element</h2>
+						<img src="assets/img/dialog.jpg" alt="dialog"/>
+					</section>
+					<section>
+						<h3>Dialog Features</h3>
+						<ul>
+							<li>
+								Centered in the Viewport
+							</li>
+							<li>
+								Can be Modal
+							</li>
+							<li>
+								Always on Top
+							</li>
+							<li>
+								Anchored to Element or MouseEvent
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
