add StageIt logo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</section>
 				<section data-state=presentor>
 					<h2>Presented by</h2>
-					<h3>Mitko Bonev <span class=position_rank>Senior</span> developer in the StageIt team</h3>
+					<h3>Mitko Bonev <span class=position_rank>Senior</span> developer in the <span class=team_name>StageIt</span> team</h3>
 				</section>
 				<section>
 					<h2>Software Setup</h2>
