add Dialog demo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<img src="assets/img/dialog.jpg" alt="dialog"/>
 					</section>
 					<section>
-						<h3>Dialog Features</h3>
+						<h3><a href=demos/dialog/index.html target=_blank>Dialog Features</a></h3>
 						<ul>
 							<li>
 								Centered in the Viewport
@@ -114,7 +114,10 @@
 								Always on Top
 							</li>
 							<li>
-								Anchored to Element or MouseEvent
+								Anchored to Element (optional)
+							</li>
+							<li>
+								Return value on close (optional)
 							</li>
 						</ul>
 					</section>
