add Responsive images slide

--- a/index.html
+++ b/index.html
@@ -123,6 +123,26 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>Responsive images</h2>
+						<img src="assets/img/dog_responsive_images.gif" alt="dog responsive images"/>
+					</section>
+					<section>
+						<h3><a href=http://responsiveimages.org/ target=_blank>Content and style images</a></h3>
+						<ul>
+							<li>
+								<code>&lt;picture&gt;</code> element - browser follows author's intentions
+							</li>
+							<li>
+								<code>&lt;img srcset&gt;</code> attribute - author hints the browser's choice
+							</li>
+							<li>
+								<code>image-set()</code> CSS function - similar to <code>srcset</code>
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
