add Responsive image demo

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 						<h3><a href=http://responsiveimages.org/ target=_blank>Content and style images</a></h3>
 						<ul>
 							<li>
-								<code>&lt;picture&gt;</code> element - browser follows author's intentions
+								<code>&lt;picture&gt;</code> element - <a href=demos/responsive_images/picture/index.html target=_blank>browser follows author's intentions</a>
 							</li>
 							<li>
 								<code>&lt;img srcset&gt;</code> attribute - author hints the browser's choice
 							</li>
 							<li>
-								<code>image-set()</code> CSS function - similar to <code>srcset</code>
+								<code>image-set()</code> - similar to <code>srcset</code> but for style images
 							</li>
 						</ul>
 					</section>
