add style to code fragments

--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
 						<h3>Timer Specifications</h3>
 						<ul>
 							<li>
-								User Timing - <a href=demos/user_timing/index.html target=_blank>measure js code performance</a>
+								User Timing - <a href=demos/user_timing/index.html target=_blank>measures js code performance</a>
 								<ul>
-									<li>PerformanceMark - named timestamp since navigationStart</li>
-									<li>PerformanceMeasure - named duration between two marks</li>
+									<li><code>PerformanceMark</code> - named timestamp since navigationStart</li>
+									<li><code>PerformanceMeasure</code> - named duration between two marks</li>
 								</ul>
 							</li>
 							<li>
-								Navigation Timing - <a href=demos/navigation_timing/index.html target=_blank>measure page navigation</a>
+								Navigation Timing - <a href=demos/navigation_timing/index.html target=_blank>measures page navigation</a>
 								<ul>
-									<li>PerformanceNavigation - type of page navigation</li>
-									<li>PerformanceTiming - page navigation timestamps</li>
+									<li><code>PerformanceNavigation</code> - type of page navigation</li>
+									<li><code>PerformanceTiming</code> - page navigation timestamps</li>
 								</ul>
 							</li>
 							<li>
-								Resource Timing - <a href=demos/resource_timing/index.html target=_blank>measure resources timings</a>
+								Resource Timing - <a href=demos/resource_timing/index.html target=_blank>measures resources timings</a>
 								<ul>
-									<li>PerformanceResourceTiming - resource initiator and timestamps</li>
+									<li><code>PerformanceResourceTiming</code> - resource initiator and timestamps</li>
 								</ul>
 							</li>
 						</ul>
