add <template> slide and demo

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						<img src="assets/img/dog_responsive_images.gif" alt="dog responsive images"/>
 					</section>
 					<section>
-						<h3><a href=http://responsiveimages.org/ target=_blank>Content and style images</a></h3>
+						<h3>Content and style images</h3>
 						<ul>
 							<li>
 								<code>&lt;picture&gt;</code> element - <a href=demos/responsive_images/picture/index.html target=_blank>browser follows author's intentions</a>
@@ -138,6 +138,37 @@
 							</li>
 							<li>
 								<code>image-set()</code> - similar to <code>srcset</code> but for style images
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Web Components</h2>
+						<img src="assets/img/dog_responsive_images.gif" alt="dog responsive images"/>
+					</section>
+					<section>
+						<h3>HTML Templates - &lt;template&gt; element</h3>
+						<ul>
+							<li>
+								the template's content is parsed to DOM
+							</li>
+							<li>
+								the template's DOM is not part of document's DOM tree
+							</li>
+							<li>
+								<code>content</code> property holds the template's DOM
+							</li>
+							<li>
+								template's DOM is <a href=demos/template/index.html target=_blank>activated</a> by appending it to the document's DOM
+								<ul>
+									<li>
+										scripts are executed
+									</li>
+									<li>
+										images are fetched
+									</li>
+								</ul>
 							</li>
 						</ul>
 					</section>
