add <element> slide

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<section>
 					<section>
 						<h2>Web Components</h2>
-						<img src="assets/img/dog_responsive_images.gif" alt="dog responsive images"/>
+						<img src="assets/img/web_components.jpg" alt="dog responsive images"/>
 					</section>
 					<section>
 						<h3>HTML Templates - &lt;template&gt; element</h3>
@@ -170,6 +170,32 @@
 									</li>
 								</ul>
 							</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Custom HTML Elements - &lt;element&gt; element</h3>
+						<ul>
+							<li>
+								has <code>name</code> and optionally <code>extends</code> a supertype
+							</li>
+							<li>
+								optionally define a JS API
+							</li>
+							<li>
+								lifecycle callbacks
+								<ul>
+									<li>
+										<code>readyCallback</code> - is created
+									</li>
+									<li>
+										<code>insertedCallback</code> - is inserted into a document
+									</li>
+									<li>
+										<code>removedCallback</code> - is removed from a document
+									</li>
+								</ul>
+							</li>
+							<li>can be defined in script as an alternative to markup</li>
 						</ul>
 					</section>
 				</section>
