add <element> demo

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								optionally define a JS API
 							</li>
 							<li>
-								lifecycle callbacks
+								<a href=demos/custom_element/index.html target=_blank>lifecycle callbacks</a>
 								<ul>
 									<li>
 										<code>readyCallback</code> - is created
