add Shadow DOM slide

--- a/index.html
+++ b/index.html
@@ -198,6 +198,38 @@
 							<li>can be defined in script as an alternative to markup</li>
 						</ul>
 					</section>
+					<section>
+						<h3>Shadow DOM</h3>
+						<ul>
+							<li>
+								a DOM tree separate from the document DOM
+							</li>
+							<li>
+								attached to an element - a shadow host
+							</li>
+							<li>
+								gets rendered instead of its host's DOM
+							</li>
+							<li>
+								can render host's DOM at specified <code>&lt;content&gt;</code> points
+							</li>
+							<li>
+								can render other host shadow trees at specified <code>&lt;shadow&gt;</code> points
+							</li>
+							<li>
+								by default blocks author styles except for the inherited ones
+							</li>
+							<li>
+								can style the host and the inserted content
+							</li>
+							<li>
+								can allow an element or certain props to be styled
+							</li>
+							<li>
+								events that escape the shadow are retargeted to host
+							</li>
+						</ul>
+					</section>
 				</section>
 				<section>
 					<h2>Thank You!</h2>
