add Shadow DOM demos

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
 								attached to an element - a shadow host
 							</li>
 							<li>
-								gets rendered instead of its host's DOM
+								gets <a href=demos/shadow_dom/shadow_tree/index.html target=_blank>rendered</a> instead of the host's DOM
 							</li>
 							<li>
-								can render host's DOM at specified <code>&lt;content&gt;</code> points
+								can <a href=demos/shadow_dom/insertion_points/index.html target=_blank>render</a> host's DOM at specified <code>&lt;content&gt;</code> points
 							</li>
 							<li>
 								can render other host shadow trees at specified <code>&lt;shadow&gt;</code> points
