add HTML Imports slide

--- a/index.html
+++ b/index.html
@@ -230,6 +230,20 @@
 							</li>
 						</ul>
 					</section>
+					<section>
+						<h3>HTML Imports</h3>
+						<ul>
+							<li>
+								a way to include and reuse HTML documents in other HTML documents
+							</li>
+							<li>
+								in particular, imports let authors include Custom Element definitions from external URLs
+							</li>
+							<pre><code data-trim>
+								<link rel="import" href="/static/elements/calendar.html">
+							</code></pre>
+						</ul>
+					</section>
 				</section>
 				<section>
 					<h2>Thank You!</h2>
