add Shadow DOM styling demo

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 								by default blocks author styles except for the inherited ones
 							</li>
 							<li>
-								can style the host and the inserted content
+								can <a href=demos/shadow_dom/styling/index.html target=_blank>style</a> the host and the inserted content
 							</li>
 							<li>
 								can allow an element or certain props to be styled
