add Flexbox slides and demo

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<section>
 					<section>
 						<h2>Web Components</h2>
-						<img src="assets/img/web_components.jpg" alt="dog responsive images"/>
+						<img src="assets/img/web_components.jpg" alt="web components"/>
 					</section>
 					<section>
 						<h3>HTML Templates - &lt;template&gt; element</h3>
@@ -242,6 +242,63 @@
 							<pre><code data-trim>
 								<link rel="import" href="/static/elements/calendar.html">
 							</code></pre>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>Flexbox</h2>
+						<img src="assets/img/flex-direction-terms.svg" alt="flexbox directions" style="background: white"/>
+					</section>
+					<section>
+						<h3>Flexbox container</h3>
+						<ul>
+							<li>
+								a parent (container) <a href=demos/flexbox/index.html target=_blank>lays out</a> its children (items) in two axes
+								<ul>
+									<li>
+										main axis - start, end, size
+									</li>
+									<li>
+										cross axis - start, end, size
+									</li>
+								</ul>
+							</li>
+							<li>
+								main axis
+								<ul>
+									<li><code>flex-direction</code> establishes the axis
+									<li><code>justify-content</code> distributes the extra free space
+								</ul>
+							</li>
+							<li>
+								cross axis
+								<ul>
+									<li><code>flex-wrap</code> establishes the axis
+									<li><code>align-content</code> distributes the extra free space
+									<li><code>align-items</code> lays out the items
+								</ul>
+							</li>
+						</ul>
+					</section>
+					<section>
+						<h3>Flexbox items</h3>
+						<ul>
+							<li>
+								can change the appearance order
+							</li>
+							<li>
+								can take up free space proportionaly
+							</li>
+							<li>
+								can shrink proportionaly if necessary
+							</li>
+							<li>
+								can set its initial size (before free space is distributed)
+							</li>
+							<li>
+								can override the container's item alignment
+							</li>
 						</ul>
 					</section>
 				</section>
