add Multi-Column layout slide with demo

--- a/index.html
+++ b/index.html
@@ -303,6 +303,32 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>Multi-column Layout</h2>
+						<img src="assets/img/multiple-columns.jpg" alt="flexbox directions" style="background: white"/>
+					</section>
+					<section>
+						<h3>Columns</h3>
+						<ul>
+							<li>
+								have count and width
+							</li>
+							<li>
+								have gaps and rules between them
+							</li>
+							<li>
+								column breaks' places can be <a href=demos/multi_column/index.html target=_blank>specified</a>
+							</li>
+							<li>
+								an element can span across multiple columns
+							</li>
+							<li>
+								content is balanced equally or filled sequentally
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
