add CSS Filters slide

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				<section>
 					<section>
 						<h2>Multi-column Layout</h2>
-						<img src="assets/img/multiple-columns.jpg" alt="flexbox directions" style="background: white"/>
+						<img src="assets/img/multiple-columns.jpg" alt="mutliple columns" style="background: white"/>
 					</section>
 					<section>
 						<h3>Columns</h3>
@@ -324,6 +324,30 @@
 							</li>
 							<li>
 								content is balanced equally or filled sequentally
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>CSS Filters</h2>
+						<img src="assets/img/css_filters.png" alt="filtered images" style="background: white"/>
+					</section>
+					<section>
+						<h3>CSS Filters</h3>
+						<ul>
+							<li>
+								Predefined
+								<ul>
+									<li><code>blur()</code>, <code>brightness()</code>, <code>contrast()</code>, etc.</li>
+								</ul>
+							</li>
+							<li>
+								Custom
+								<ul>
+									<li>manipulate the color and <a href=http://html.adobe.com/webplatform/graphics/customfilters/cssfilterlab/ target=_blank>shape</a></li>
+									<li>adopt the WebGL shading language</li>
+								</ul>
 							</li>
 						</ul>
 					</section>
