--- a/index.html
+++ b/index.html
@@ -353,6 +353,26 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>CSS Regions</h2>
+						<img src="assets/img/css_regions.webp" alt="filtered images" style="background: white"/>
+					</section>
+					<section>
+						<h3>CSS Regions</h3>
+						<ul>
+							<li>
+								 for <a href=demos/css_regions/index.html target=_blank>complex layouts</a> (magazine-like)
+							</li>
+							<li>
+								content <a href=http://wiki.csswg.org/spec/css3-regions/regions-use-cases target=_blank>flows</a> from one area (region) to another
+							</li>
+							<li>
+								regions for a flow are chained in a document order
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
