add CSS Exclusions slide

--- a/index.html
+++ b/index.html
@@ -373,6 +373,24 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>CSS Exclusions + CSS Shapes</h2>
+						<img src="assets/img/css_exclusion_and_shape.png" alt="filtered images" style="background: white"/>
+					</section>
+					<section>
+						<h3>CSS Exclusions</h3>
+						<ul>
+							<li>
+								define areas around which content can flow
+							</li>
+							<li>
+							  content flows around a single exclusion side or both sides
+							  <img src=assets/img/exclusion_wrap_side_right.png />
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
