add CSS Shapes slide and demo

--- a/index.html
+++ b/index.html
@@ -389,6 +389,14 @@
 							</li>
 						</ul>
 					</section>
+					<section>
+						<h3>CSS Shapes</h3>
+						<ul>
+							<li>
+								control the <a href=demos/css_shapes/index.html target=_blank>shapes</a> around which content flows
+							</li>
+						</ul>
+					</section>
 				</section>
 				<section>
 					<h2>Thank You!</h2>
