--- a/index.html
+++ b/index.html
@@ -399,6 +399,28 @@
 					</section>
 				</section>
 				<section>
+					<section>
+						<h2>CSS Masking</h2>
+						<img src="assets/img/css_masking.png" alt="masking" style="background: white"/>
+					</section>
+					<section>
+						<h3>CSS Masking</h3>
+						<ul>
+							<li>
+								provides <a href=http://www.html5rocks.com/en/tutorials/masking/adobe/ target=_blank>two means</a> for partially or fully hiding portions of visual elements
+								<ul>
+									<li>
+										masking
+									</li>
+									<li>
+										clipping
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</section>
+				</section>
+				<section>
 					<h2>Thank You!</h2>
 					<p>slides: <a href="https://github.com/dsbonev/web-platform-features-presentation" target=_blank>github.com/dsbonev/web-platform-features-presentation</a></p>
 				</section>
